# post-merger-liquidity-engine

./: .gitignore  README.md  pyproject.toml
config/: settings.yaml
data/simulated/: .gitkeep
models/artifacts/: .gitkeep
scripts/: generate_simulated_data.py  run_dashboard.py  train_model.py
src/: __init__.py  config.py
src/dashboard/: app.py
src/data_simulation/: __init__.py  interbank_rates.py  margin_calls.py  pipeline.py  system_feeds.py  withdrawal_history.py
src/models/: __init__.py  ensemble.py  random_forest_model.py  time_series_model.py
src/prediction/: __init__.py  liquidity_predictor.py
src/stress_testing/: __init__.py  bank_run_scenarios.py
tests/: test_pipeline.py
