[project]
name = "global-intraday-liquidity-predictor"
version = "0.1.0"
description = "Global Intraday Liquidity Predictor & Stress Tester for post-merger bank consolidation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Treasury Risk Engineering" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "streamlit>=1.32",
    "plotly>=5.19",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "python-dateutil>=2.9",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[project.scripts]
generate-data = "scripts.generate_simulated_data:main"
train-model = "scripts.train_model:main"
run-dashboard = "scripts.run_dashboard:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
